ui/file_manager/file_manager/foreground/css/file_manager.css
/* ... */
/* The icon in the name column. See file_types.css for specific icons. */
.detail-icon {
  height: 24px;
  width: 24px;
}

#detail-table .detail-icon {
  /* To shift the icon position. */
  margin-bottom: 2px;
}

.metadata-item {
  -webkit-box-flex: 1;
  -webkit-box-orient: horizontal;
  -webkit-padding-start: 8px;
  display: -webkit-box;
}

.metadata-label {
  -webkit-margin-end: 6px;
}

.preview-panel .spacer {
  -webkit-box-flex: 1;
}

#delete-button {
  min-width: 21px;  /* overrride */
  padding: 0;  /* overrride */
  width: 21px;
}

#delete-button::before {
  /* Background image should be specified in the before pseudo element because
   * border image fill is specified to delete-button. */
  background: -webkit-image-set(
    url(../images/files/ui/onbutton_trash.png) 1x,
    url(../images/files/ui/2x/onbutton_trash.png) 2x) no-repeat center;
  content: '';
  display: block;
  height: 100%;
  width: 100%;
}

#delete-button[disabled] {
  display: none;
}

#tasks-menu menuitem:not(.change-default) {
  background-position: left 10px center;
  padding-left: 32px;
}

#share-button {
  display: block;
  min-width: 0;  /* overrride */
}

#preview-lines {
  -webkit-box-flex: 1;
  -webkit-margin-end: 10px;
  -webkit-margin-start: 10px;
  vertical-align: middle;
}

/* The selection summary text at the bottom of the preview pane. */
.preview-summary {
  color: #666;
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: middle;
  white-space: nowrap;
}

.preview-summary .calculating-size {
  margin-left: 5px;
  opacity: 0.5;
}

.detail-name > * {
  -webkit-box-align: center;
  display: -webkit-box;
}

/* Overriding input.common[type='checkbox'] rule in common.css. */
.detail-name > input.common[type='checkbox'] {
  -webkit-margin-end: 4px;
  -webkit-margin-start: -1px;
  border-color: #444;
}

list .detail-name > .file-checkbox::before,
.pin::before {
  /* Invisible area that reacts on mouse events. */
  content: '';
  display: -webkit-box;
  height: 38px;
  left: -8px;
  position: absolute;
  right: -9px;
  top: -14px;
}

#filename-input-box {
  -webkit-box-align: center;
  -webkit-box-flex: 1;
  display: -webkit-box;
}

#filename-input-box input {
  -webkit-box-flex: 1;
  display: -webkit-box;
  padding: 1px 2px;
}

#filename-input-box .filename-label {
  -webkit-box-orient: horizontal;
  background-color: white;
  color: #333;
  display: -webkit-box;
  padding-right: 4px;
}

body:not([type='saveas-file']) #filename-input-box {
  display: none;
}

/* A vertical spring. */
.vertical-spacer {
  -webkit-box-flex: 1;
  -webkit-box-orient: vertical;
  display: -webkit-box;
}

/* Dimmed items */

body[type='folder'] .file,
body[type='upload-folder'] .file,
body[drive] .dialog-container[connection='offline'] .dim-offline {
  opacity: 0.4;
}

/* Overlay pane covering the entire file manager window (e.g. image editor)*/
.overlay-pane {
  -webkit-app-region: no-drag;
  border: none;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 1000;  /* Must be above all elements in file manager container. */
}

/* When the overlay pane is visible hide everything else so that the tab order
  is not confused. */
body[overlay-visible] > :not(.overlay-pane) {
  display: none !important;
}

/* Invisible container for elements representing files while dragging. */
#drag-container {
  left: 0;
  /* Hack for extra margins caused by setDragImage(). */
  padding: 1000px 0 0 1000px;
  position: fixed;
  top: 0;
  z-index: -1;  /* below .dialog-container */
}

#drag-container .drag-contents {
  -webkit-box-orient: horizontal;
  background-color: #fafafa;
  border: 1px solid #bbb;
  border-radius: 3px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .2);
  display: -webkit-box;
  margin-bottom: 5px;
  padding: 6px;
  transition: opacity 200ms ease-in;
}

#drag-container .drag-contents.for-image  {
  padding: 2px;
}

#drag-container .thumbnail-item {
  -webkit-box-orient: horizontal;
  display: -webkit-box;
}

/* When changing these properties please preserve these conditions:
   1. width == height (so that the rotated thumbnail does not look off-center)
   2. width % 8 == 0 (to minimize rounding errors in the centering code) */
#drag-container .img-container {
  -webkit-box-flex: 0;
  display: -webkit-box;
  height: 64px;
  overflow: hidden;
  position: relative;
  width: 64px;
}

#drag-container .label {
  -webkit-box-flex: 1;
  font-weight: bold;
  line-height: 24px;
  max-width: 320px;
  overflow: hidden;
  padding: 0 5px;
  text-overflow: ellipsis;
  white-space: nowrap;
}

menu.file-context-menu {
  z-index: 600;  /* Must be below the overlay pane (1000). */
}

menu.chrome-menu hr {
  color: transparent;
  font-size: 0;
}

div.offline {
  -webkit-box-pack: center;
  display: -webkit-box;
}

div.offline > * {
  -webkit-box-align: center;
  display: -webkit-box;
}

div.shade {
  /* transition: opacity 1000ms linear; */
  background-color: rgba(255, 255, 255, 0.8);
  bottom: 0;
  left: 0;
  opacity: 0;
  position: absolute;
  right: 0;
  top: 0;
}

div.shade[fadein] {
  opacity: 1;
}

/* Message panel for unmounted Drive */
#unmounted-panel,
#format-panel {
  bottom: 0;
  color: #333;
  display: none;
  left: 0;
  padding-left: 50px;
  padding-top: 20px;
  position: absolute;
  right: 0;
  top: 0;
}

body[drive='mounting'] .dialog-container #unmounted-panel,
body[drive='error'] .dialog-container #unmounted-panel,
body[unformatted] .dialog-container #format-panel {
  display: block;
}

body[drive='unmounted'] .dialog-container .filelist-panel,
body[drive='mounting'] .dialog-container .filelist-panel,
body[drive='error'] .dialog-container .filelist-panel,
body[unformatted] .dialog-container .filelist-panel {
  /* Hide file list when Drive is not mounted.
     Use opacity to avoid manual resizing.*/
  opacity: 0;
}
/* ... */

